--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* border: 1px solid yellow; */
 }
 
 body {
@@ -187,6 +188,12 @@ body {
   display: block;
 }
 
+.skills-spells-wrapper {
+  height: 100%;
+  width: 100%;
+  /* background-color: whitesmoke; */
+}
+
 .skills-wrapper {
   width: 100%;
   height: 100%;
@@ -197,13 +204,15 @@ body {
   line-height: 1.4rem;
   border: 0;
   padding: 8px;
+  /* text-align: center; */
 }
 
 .skills-wrapper ul {
-  /* width: 100%; */
+  width: 50%;
+  min-width: 330px;
   /* height: 90%; */
-  padding: 0;
-  margin: 0;
+  /* padding: 0; */
+  /* margin: auto; */
   /* background-color: white; */
 }
 
@@ -223,6 +232,8 @@ body {
 .remaining-prof {
   /* margin: auto; */
   padding: 0 8px;
+  display: inline-block;
+  width: 50%;
 }
 
 .dice-roll button:focus {
